correct overflow html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,10 @@ table {
   border-spacing: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #F4EBD6;
   color: #124660;
